# django-saas-boilerplate

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  LICENSE  Pipfile  Procfile  README.md  app.json  bitbucket-pipelines.yml  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tasks.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug---problem.md  feature_request.md
apps/core/: constants.py  custom_email_backend.py  custom_exceptions.py  email_service.py  tests.py  urls.py  utils.py  views.py
apps/core/scripts/: poetry_scripts.py
apps/core/tests/: base_test_utils.py  test_custom_email_backend.py  test_docs.py  test_email_service.py  test_exception_handler.py  test_poetry.py  test_welcome_page_view.py
apps/gdpr/: constants.py  email_service.py  utils.py
apps/gdpr/management/commands/: daily_tasks.py  delete_inactive_users.py  remove_deleted_users.py  send_account_info.py
apps/gdpr/tests/: base_test_utils.py  test_delete_inactive_users_command.py  test_email_service.py  test_remove_deleted_users_command.py  test_send_account_info_command.py  test_utils.py
apps/users/: custom_jwt.py  email_service.py  forms.py  models.py  serializers.py  tests.py  tokens.py  urls.py  utils.py  views.py
apps/users/constants/: messages.py  template_names.py  url_names.py  urls_for_tests.py
apps/users/migrations/: 0001_initial.py  0002_user_auth_fields.py  0003_user_gdpr_fields.py  0004_user_last_password_change_date.py
apps/users/tests/: base.py  base_test_utils.py  constants.py  factories.py  test_change_user_password.py  test_custom_jwt.py  test_delete_user.py  test_email_service.py  test_forms.py  test_jwt_token.py  test_registration.py  test_reset_user_password.py  test_serializers.py  test_user_info_link.py  test_user_login.py  test_user_me_endpoint.py  test_user_model.py
conf/: settings.py  urls.py  utils.py  wsgi.py
conf/settings/: base.py  local.py  production.py  test.py
conf/tests/: test_utils.py
devops/: entrypoint.sh
devops/docker/postgres/: Dockerfile  init.sh
devops/docker/python/: Dockerfile  entrypoint.sh
devops/docker/redis/: Dockerfile
scripts/: poetry_scripts.py
scripts/tests/: test_poetry_scripts.py
static/welcome/: style.css
staticfiles/: staticfiles.json
staticfiles/admin/css/: base.94893682937c.css
staticfiles/welcome/: style.f56750d25563.css
templates/: welcome.html
