[tool.poetry]
name = "django-saas-boilerplate"
version = "0.1.0"
description = "A Django + django-rest-framework + Heroku + SaaS application boilerplate"
authors = ["Pixelpassion"]
packages = [
    { include="scripts", from="." },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.8"               # Python versions must be set in dependencies for poetry
django = "<3"                       # Basics and boilerplate stuff (BSD-3)
django-environ = "^0.4.5"           # Configuration by environment variables according to 12Factor model (MIT)
sentry-sdk = "^0.14.2"              # Error logging to Sentry
django-rest-framework = "^0.1.0"    # Tools for RESTful API (BSD-2)
psycopg2-binary = "^2.8.4"          # Database connector (LGPL)
gunicorn = "^20.0.4"                # Python WSGI HTTP Server
django-cors-headers = "^3.2.1"
django-extensions = "^2.2.8"        # Different helpers for Django REST Framework
django-rq = "^2.3.0"                # Asynchronous tasks
django-redis = "^4.11.0"            # Redis cache backend (BSD-3)
whitenoise = "^5.0.1"
urllib3 = "^1.25.8"
saasy = "^0.0.1"
django-rest-auth = "^0.9.5"
djangorestframework-simplejwt = "^4.4.0"
django-trench = "^0.2.3"
drf-yasg = "^1.17.1"


[tool.poetry.dev-dependencies]
django-werkzeug = "^1.0.0"
ipdb = "^0.13.2"                       # Debugging
django-coverage-plugin = "^1.8.0"
django-pdb = "^0.6.2"
werkzeug = "^1.0.0"                    # A flexible WSGI implementation and toolkit (BSD-3)
mypy = "^0.770"
factory_boy = "^2.12.0"                # Mocked Test data
coverage = "^5.0.4"
ipython = "^7.13.0"                    # Better Python shell
pre-commit = "^2.2.0"
prospector = ">1.1.6.4"
Faker = "^4.0.2"
black = "^19.10b0"
flake8 = "<=3.4.0"                      # Old version, because prospector stick with old deps of pyflake and pycodestyles
pytest = "<5.4.0"                       # Better testing
autopep8 = "<=1.3.5"                    # Old version, because prospector stick with old deps of pyflake and pycodestyles
django-silk = "^4.0.1"
pytest-django = "^3.8.0"
pytest-xdist = "^1.31.0"
pytest-factoryboy = "^2.0.3"
pytest-freezegun = "^0.4.1"
pytest-mock = "^2.0.0"
pytest-sugar = "^0.9.2"
pytest-env = "^0.6.2"


[tool.poetry.scripts]
go-docker = "scripts.poetry_scripts:go_docker"
create-coverage = "scripts.poetry_scripts:coverage_report"
check-coverage = "scripts.poetry_scripts:check_coverage"
codecov-report = "scripts.poetry_scripts:coverage_xml"
generate-requirements = "scripts.poetry_scripts:generate_requirements"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
